--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -6,5 +6,5 @@
     align-items: center;
     box-shadow: 0 2px 2px #ccc;
     margin: auto;
-    padding-inline-end: 10px 0;
+    padding: 10px 0;
 }
