--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -1,25 +1,52 @@
 .NavigationItem {
-    margin: 0;
+    margin:0;
     box-sizing: border-box;
     display: flex;
-    height: 100%;
-    align-items: center;
+    width: auto;
+    flex-flow: column;
 }
 
 .NavigationItem a {
     text-decoration: none;
-    color: white;
-    height: 100%;
+    color: black;
+    width: 100%;
     padding: 16px 10px;
     border-bottom:  4px solid transparent;
     box-sizing: border-box;
     display: block;
+
 }
 
 .NavigationItem a:hover ,
 .NavigationItem a:active ,
 .NavigationItem a.active {
-    background-color:firebrick ;
+    
     border-bottom: 4px solid rgb(14, 13, 13);
-    color: white;
+    color: brown;
+}
+
+@media(min-width: 500px) {
+
+            .NavigationItem {
+                margin: 0;
+                display: flex;
+                height: 100%;
+                align-items: center;
+                width: auto;
+            }
+            
+            .NavigationItem a {
+                text-decoration: none;
+                color: white;
+                width: 100%;
+                height: 100%;
+            }
+            
+            .NavigationItem a:hover ,
+            .NavigationItem a:active ,
+            .NavigationItem a.active {
+                background-color:firebrick ;
+                border-bottom: 4px solid rgb(14, 13, 13);
+                color: white;
+            }
 }
