--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -1,9 +1,9 @@
 .NavigationItem {
     margin:0;
     box-sizing: border-box;
-    display: flex;
-    width: auto;
-    flex-flow: column;
+    display: block;
+    width: 100%;
+    /* flex-flow: column; */
 }
 
 .NavigationItem a {
